--- a/app/src/main/res/layout/item_news.xml
+++ b/app/src/main/res/layout/item_news.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content">
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         app:cardElevation="10dp"
         app:cardCornerRadius="20dp"
         android:layout_margin="10dp"
@@ -23,26 +23,26 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="8"
+                android:layout_margin="10dp"
                 android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/thumbnail"
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:gravity="center"
+                    android:layout_height="wrap_content"
+                    android:gravity="left"
                     android:textSize="20sp"
-                    android:layout_weight="8"
+                    android:layout_margin="10dp"
                     android:textColor="#46F84D"
                     android:text="Thumbnail" />
 
                 <TextView
                     android:id="@+id/publishTime"
                     android:layout_width="match_parent"
-                    android:layout_marginLeft="20dp"
-                    android:layout_height="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
                     android:textSize="10sp"
-                    android:layout_weight="2"
-                    android:text="Time" />
+                    android:text="Time in IST" />
             </LinearLayout>
 
             <ImageView
@@ -51,6 +51,7 @@
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:layout_weight="3"
+                android:src="@drawable/ic_launcher_background"
                 android:contentDescription="imageOfNews"/>
         </LinearLayout>
 
